Rework breakpoints and add support for displaying integer and null values